--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
-language: perl
-
+language: "perl"
 perl:
+- "5.22"
+- "5.20"
 - "5.18"
+- "5.16"
+- "5.14"
+- "5.12"
 
-script:
-  - perl t/test.pl
+before_install:
+- sudo apt-get update -q
+- sudo apt-get install -y libgmp-dev
+- cpanm Test::Pod # optional dependency
+
+install:
+- cpanm -v --installdeps --notest .
+
+script: "perl Build.PL; ./Build test"
+# script:
+#   - perl t/test.pl
